# BullshitGenerator

./: README.md  demo 2.cpp  demo.cpp  main.cpp
废话生成器/: CMakeLists.txt
废话生成器/src/: Headers.h  main.cpp
废话生成器/src/Component/: Element.cpp  Element.h  Logical.cpp  Logical.h  Word.cpp  Word.h
废话生成器/src/Decorator/: AppendLib.cpp  AppendLib.h  Decorator.cpp
废话生成器/src/Factory/: Word.cpp  Word.h  WordFactory.cpp  WordFactory.h
废话生成器/src/PolyParser/: Resolve.cpp  Resolve.h
废话生成器/src/Resolve/: Resolve.cpp  Resolve.h
废话生成器/src/Syntactic/: AlsoDo.cpp  AlsoDo.h  AlthoughDo.cpp  AlthoughDo.h  Command.cpp  Command.h  DoIf.cpp  DoIf.h  Sentence.cpp  Sentence.h  Syntactic.cpp  Syntactic.h
废话生成器/废话生成器/废话生成器/: main.cpp
废话生成器/废话生成器/废话生成器.xcodeproj/: project.pbxproj
废话生成器/废话生成器/废话生成器.xcodeproj/xcuserdata/jerryzhou.xcuserdatad/xcschemes/: xcschememanagement.plist  废话生成器.xcscheme
